2024-05-04 Konstantin Kushnir <chpock@gmail.com>
	* Fix build error when c-pages is disabled

2024-05-03 Konstantin Kushnir <chpock@gmail.com>
	* Fix missed quotes in pages.test

2024-04-29 Konstantin Kushnir <chpock@gmail.com>
	* Don't install binaries before test/shell/gdb make recipes
	* Fix the make recipes test/shell/gdb
	* Add the make recipe 'package'
	* Make tests fail with an error on unsuccessful run
	* Detect tclsh correctly on Windows platform
	* Add Github workflow
	* Enable xz feature by default

2024-04-06 Konstantin Kushnir <chpock@gmail.com>
	* Add basic benchmarks
	* Add a function to fsindex to find out how many files are using a particular block

2024-04-01 Konstantin Kushnir <chpock@gmail.com>
	* Fix the build when xz is not enabled
	* Fix potential buffer overflow

2024-03-31 Konstantin Kushnir <chpock@gmail.com>
	* Search for cookfs index in the last 64k bytes of a file

2024-03-30 Konstantin Kushnir <chpock@gmail.com>
	* Fix positioning bug in readerchannel

2024-03-29 Konstantin Kushnir <chpock@gmail.com>
	* Add procedures for md5/sha1/sha256 hashes
	* Fix minor compiler warnings

2024-03-24 Konstantin Kushnir <chpock@gmail.com>
	* Fix pkgconfig for xz feature status
	* Don't load tcl versions of ::pages and ::fsindex by default
	* Don't use xz compression when it is inefficient
	* Add tests for all compression methods

2024-03-23 Konstantin Kushnir <chpock@gmail.com>
	* Set compression level 9 for xz
	* Make test cookfsVfs-1.9 more verbose as it fails randomly

2024-03-17 Konstantin Kushnir <chpock@gmail.com>
	* Refactor tests to not depend on source files

2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Bumped minimum Tcl version to 8.5.0
	* Enable compiler warnings
	* Fix minor issues from compiler warnings

2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Add support for xz compression and use it by default

2012-05-22 Wojciech Kocjan <zoro2@users.sourceforge.net>