@@ -1,5 +1,6 @@
 2024-05-04 Konstantin Kushnir <chpock@gmail.com>
 	* Fix build error when c-pages is disabled
+	* Use crc32 hash in tcl-pages by default. This removes the mandatory md5 package requirement.
 
 2024-05-03 Konstantin Kushnir <chpock@gmail.com>
 	* Fix missed quotes in pages.test
